fix: (attempt) focus state persisting on tap on mobile (e.g., toggle properties)

--- a/styles.css
+++ b/styles.css
@@ -555,11 +555,13 @@ body {
             box-shadow: inset 0 0 0 2px var(--background-modifier-border-focus);
         }
 
-        & a:hover, span.external-link:hover {
-            box-shadow: none;
-            opacity: var(--icon-opacity-hover);
-            background-color: var(--cg-nt-item-bg-color-hover);
-            color: var(--cg-nt-item-text-color-hover);
+        @media (hover: hover) {
+            & a:hover, span.external-link:hover {
+                box-shadow: none;
+                opacity: var(--icon-opacity-hover);
+                background-color: var(--cg-nt-item-bg-color-hover);
+                color: var(--cg-nt-item-text-color-hover);
+            }
         }
 
         & a.external-link, span.external-link {
